# gnurx-sys

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs
.cargo/: config.toml
libgnurx/: regcomp.c  regex_internal.c  regex_internal.h  regexec.c
src/: lib.rs  tests.rs
