[package]
name = "gnurx-sys"
description = "Regular expression functionality from glibc extracted into a separate library, for Win32"
version = "0.1.2" # Remember to update `html_root_url`.
authors = [ "Koutheir Attouchi <koutheir.attouchi@microdoc.com>" ]
edition = "2018"
readme = "README.md"
license = "LGPL-2.1-or-later"
keywords = [ "regex", "glibc", "libgnurx", "regcomp", "regexec" ]
categories = [ "external-ffi-bindings", "os::windows-apis", "parsing", "text-processing" ]
build = "build.rs"
links = "gnurx"
repository = "https://github.com/koutheir/gnurx-sys"
documentation = "https://docs.rs/gnurx-sys"

[lib]
crate-type = [ "rlib" ]

[dependencies]

[build-dependencies]
cc      = { version = "1.0"  }
walkdir = { version = "2.3"  }
bindgen = { version = "0.55" }
dunce   = { version = "1.0"  }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = [ "x86_64-pc-windows-gnu", "i686-pc-windows-gnu" ]
