[package]
name          = "gnurx-sys"
description   = "Regular expression functionality from glibc extracted into a separate library, for Win32"
version       = "0.3.8"                                                                                    # Remember to update `html_root_url`.
authors       = ["Koutheir Attouchi <koutheir@gmail.com>"]
edition       = "2021"
readme        = "README.md"
license       = "LGPL-2.1-or-later"
keywords      = ["regex", "glibc", "libgnurx", "regcomp", "regexec"]
build         = "build.rs"
links         = "gnurx"
documentation = "https://docs.rs/gnurx-sys"
homepage      = "https://codeberg.org/koutheir/gnurx-sys"
repository    = "https://codeberg.org/koutheir/gnurx-sys"

categories = [
    "external-ffi-bindings",
    "os::windows-apis",
    "parsing",
    "text-processing",
]

[lib]
crate-type = ["rlib"]

[build-dependencies]
cc      = { version = "1.0" }
walkdir = { version = "2.5" }
bindgen = { version = "0.69" }
dunce   = { version = "1.0" }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets        = ["x86_64-pc-windows-gnu", "i686-pc-windows-gnu"]
